# tak-server-playground

./: .env  .gitignore  .gitmodules  CLAUDE.md  CoreConfig-4.10.xml  CoreConfig-minimal.xml  CoreConfig-noauth.xml  CoreConfig-working.xml  CoreConfig.xml  Dockerfile  Dockerfile.takserver-debug  Dockerfile.takserver-official  Dockerfile.takserver-simple  EDIT_ME.env  README-Docker.md  UserAuthenticationFile-simple.xml  UserAuthenticationFile.xml  clone-and-build.sh  configure-server.sh  diagnose.sh  docker-build.sh  docker-compose-simple-test.yml  docker-compose-simple.yml  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  init-database.sql  monitor-startup.sh  setup-database.sh  setup-dependencies.sh  setup-tak-server.sh  start-server.sh  supervisord.conf  test-takserver.sh
docker/amd64/: Dockerfile.takserver
tak-built/: configureInDocker.sh  docker_entrypoint_simple.sh  docker_entrypoint_working.sh  setenv.sh
tak-wrapper/: .gitignore  CMakeLists.txt  README.md  README_CoT_Applications.md  README_CoT_Injector.md  README_TAKServer_Management.md  cot_common.cpp  cot_common.h  cot_injector.cpp  cot_listener.cpp  manage_takserver.sh  run_cot_injector.sh  run_cot_listener.sh  tak
